--- a/stockfx/src/main/resources/fxml/Application.fxml
+++ b/stockfx/src/main/resources/fxml/Application.fxml
@@ -7,36 +7,34 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.tintuna.stockfx.controller.Application">
+<BorderPane fx:id="root" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml"
+	fx:controller="com.tintuna.stockfx.controller.Application">
+	<!-- Header -->
+	<top>
+		<VBox spacing="5">
+			<styleClass>
+				<String fx:value="header" />
+			</styleClass>
+			<children>
+				<Label text="StockFx">
+					<styleClass>
+						<String fx:value="label" />
+						<!-- String fx:value="title"/ -->
+					</styleClass>
+				</Label>
+				<Label text="Advanced stock portfolio manager">
+					<styleClass>
+						<!-- String fx:value="label "/ -->
+						<String fx:value="tagline" />
+					</styleClass>
+				</Label>
+			</children>
+		</VBox>
+	</top>
+
+	<!-- Content Area -->
 	<center>
-		<SplitPane dividerPositions="0.5590062111801242" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0">
-			<VBox fx:id="xxx" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0">
-				<ScrollPane fitToHeight="true" fitToWidth="true" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0"
-					prefWidth="-1.0" VBox.vgrow="ALWAYS">
-					<content>
-						<VBox fx:id="portfolioList" />
-					</content>
-				</ScrollPane>
-			</VBox>
-			<VBox fx:id="xxx" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0">
-				<ScrollPane fitToHeight="true" fitToWidth="true" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0"
-					prefWidth="-1.0" VBox.vgrow="ALWAYS">
-					<GridPane fx:id="gridPane" hgap="2.0" vgap="10.0">
-						<columnConstraints>
-							<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-							<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-						</columnConstraints>
-						<padding>
-							<Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-						</padding>
-						<rowConstraints>
-							<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-							<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-							<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-						</rowConstraints>
-					</GridPane>
-				</ScrollPane>
-			</VBox>
-		</SplitPane>
+		<TabPane fx:id="tabPane">
+		</TabPane>
 	</center>
 </BorderPane>
