--- a/stockfx/src/main/resources/fxml/Portfolio.fxml
+++ b/stockfx/src/main/resources/fxml/Portfolio.fxml
@@ -12,8 +12,8 @@
   <bottom>
     <AnchorPane prefHeight="-1.0" prefWidth="-1.0" BorderPane.alignment="TOP_LEFT">
       <children>
-        <Button alignment="CENTER_LEFT" mnemonicParsing="false" text="New Portfolio" AnchorPane.leftAnchor="0.0" />
-        <Button alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" text="New Stock" AnchorPane.rightAnchor="0.0" />
+        <Button fx:id="newPortfolioButton" alignment="CENTER_LEFT" mnemonicParsing="false" text="New Portfolio" AnchorPane.leftAnchor="0.0" />
+        <Button fx:id="newStockButton" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" text="New Stock" AnchorPane.rightAnchor="0.0" />
       </children>
       <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
