--- a/stockfx/src/main/resources/fxml/Portfolio.fxml
+++ b/stockfx/src/main/resources/fxml/Portfolio.fxml
@@ -35,20 +35,10 @@
       </VBox>
       <VBox fx:id="stockList" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0">
         <ScrollPane fitToHeight="true" fitToWidth="true" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-          <GridPane fx:id="gridPane" hgap="2.0" vgap="10.0">
-            <columnConstraints>
-              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            </columnConstraints>
-            <padding>
-              <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-            </padding>
-            <rowConstraints>
-              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-          </GridPane>
+          <content>
+            <!--  VBox fx:id="portfolioList" / -->
+            <TableView fx:id="stockTable"/>
+          </content>
         </ScrollPane>
       </VBox>
     </SplitPane>
