1. Added Stock handling - portfolio to stocks a many:many relationship.  Can add a new stock for a portfolio or add an existing one. 2. Improved and unit tested the TabManager 3. Due to currently printing out stocks and portfolios (from the many:many relationship) I have to access them to force them to be fetched.  I could change to fetch.eager instead. 4. Did styling using the FXExperience CSS generator tool
TODO:
1. Fix Stock Model - currently a global one but need to have one per portfolio
2. Stock picking - don't want an existing stocks drop down and a box to add a new one.  Would prefer just a box and a realtime lookup is done as the user types to show existing stocks
3. Onwards and upwards with stock data, portfolio data persistence and so on

--- a/stockfx/src/main/resources/styles/styles.css
+++ b/stockfx/src/main/resources/styles/styles.css
@@ -1,11 +1,12 @@
 /* Application wide styles */
 
 .label {
-    -fx-font-size: 24px;
+    -fx-font-size: 14px;
     -fx-font-weight: bold;
     -fx-text-fill: #333333;
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
+
 
 .button {
     -fx-text-fill: white;
@@ -52,4 +53,70 @@
 
 .body {
     -fx-padding: 20;
+}
+
+#portfolioNameLabelLabel {
+	-fx-text-fill: red;
+	-fx-font-size: 18px;
+}
+
+/* *** From FXExperience tools *** */
+.root {
+    -fx-font-family: "Chalkboard";
+    -fx-font-size: 10.0px;
+    -fx-base: #F1D6D6;
+    -fx-background: #E8E4BC;
+    -fx-focus-color: #0093FF;
+    -fx-control-inner-background: #FFFFFF;
+    -fx-inner-border: linear-gradient(to bottom, derive(-fx-color,63.70724346076459%) 0%, derive(-fx-color,-21.40281690140845%) 100%);
+    -fx-body-color: linear-gradient( to bottom, derive(-fx-color, 20.714285714285722%) 0%, derive(-fx-color, -39.92857142857144%) 100%);
+}
+.button, .toggle-button, .choice-box {
+    -fx-background-radius: 9, 9, 8, 7;
+    -fx-padding: 7px 14px 7px 14px;
+}
+.menu-button {
+    -fx-background-radius: 9, 9, 8, 7;
+}
+.menu-button .label {
+    -fx-padding: 7px 22px 7px 14px;
+}
+.menu-button .arrow-button {
+    -fx-padding: 7px 10px 7px 0px;
+}
+.choice-box {
+    -fx-padding: 0 10px 0 0;
+}
+.choice-box .label {
+    -fx-padding: 7px 8px 7px 10px;
+}
+.choice-box .open-button {
+    -fx-padding: 1 0 0 12px;
+}
+.combo-box-base:editable .text-field, .combo-box-base .arrow-button, .combo-box .list-cell {
+    -fx-padding: 7px 10px 7px 10px;
+}
+.check-box .box {
+    -fx-padding: 0.3269230769230769em;
+}
+.radio-button .radio {
+    -fx-padding: 0.4102560769230769em;
+}
+.label, .check-box, .radio-button {
+    -fx-text-fill: -fx-text-background-color;
+}
+.button, .toggle-button, .check-box .box, .radio-button .radio, .choice-box, .menu-button, .tab, .combo-box-base {
+    -fx-background-insets: 0 0 -1 0, 0, 2, 3;
+}
+.button:focused, .toggle-button:focused, .check-box:focused .box, .radio-button:focused .radio, .choice-box:focused, .menu-button:focused, .combo-box-base:focused {
+    -fx-background-insets: -1.4, 0, 2, 3;
+}
+.combo-box-base .arrow-button {
+    -fx-background-insets: 0, 2, 3;
+}
+.choice-box .label { /* Workaround for RT-20015 */
+    -fx-text-fill: -fx-text-base-color;
+}
+.menu-button .label { /* Workaround for RT-20015 */
+    -fx-text-fill: -fx-text-base-color;
 }
