1. Setup issue tracker in GitHub so TODOs will be there from now on, except for general ones like "Onwards and upwards with stock data, portfolio data persistence and so on"! 2. Added preferences tab specifically to enable the database location to be set.  The button is on the main.fxml frame (but needs to be cleaned up) 3. Did some error checking code and if the location in prefs for the db does not exist an error message is displayed in the banner (and as a log message and an exception with the message is thrown).  The use is told to set the location and restart the application.  THe prefs tab is shown and the portfolio one is not thus not allowing the user to go any 'deeper' 4. The banner message mentioned is a feature of the system allowing error/warning information to be shown (MainApplicateion.setMessage()) 5. Fixed a bug where when you now switch to the Stocks tab, the StockController is recreated and thus all the data - the stocks for the selected portfolio - are updated and thus displayed.  Previously the stocks shown were the ones on any previously selected Portfolio 6. Fixed a bug where when you either hit 'Add / New Stock' or just select the Stock tab (note above behaviour of a new StockController being created in this situation also), the first stock in the drop-down is shown as selected, but when you hit 'add' a null entry is added as a stock to the portfolio.  The problem was that it wasn't 'selected' in the StockModel. 7. The portfolio name shown on the Stocks tab is updated (via property binding) to the portfolio that is selected.  Thus showing what portfolio any new stock is added to. 8. The combo on the Stock tab now shows the 'difference set' of stocks - ie ALL-ThoseAlreadyInThePortfolio 9. Renamed the Models to add 'Model' to the class name.  Yes its redundant but makes navigation to files easier

--- a/stockfx/src/main/resources/fxml/Main.fxml
+++ b/stockfx/src/main/resources/fxml/Main.fxml
@@ -8,33 +8,29 @@
 <?import javafx.scene.layout.BorderPane?>
 
 <fx:root type="javafx.scene.layout.BorderPane" fx:id="root" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml">
-	<!-- fx:controller="com.tintuna.stockfx.controller.Application" -->
-	<!-- Header -->
-	<top>
-		<VBox spacing="5">
-			<styleClass>
-				<String fx:value="header" />
-			</styleClass>
-			<children>
-				<Label text="StockFx">
-					<styleClass>
-						<String fx:value="label" />
-						<!-- String fx:value="title"/ -->
-					</styleClass>
-				</Label>
-				<Label text="Advanced stock portfolio manager">
-					<styleClass>
-						<!-- String fx:value="label "/ -->
-						<String fx:value="tagline" />
-					</styleClass>
-				</Label>
-			</children>
-		</VBox>
-	</top>
-
-	<!-- Content Area -->
-	<center>
-		<TabPane fx:id="tabPane">
-		</TabPane>
-	</center>
+  <bottom>
+    <Button fx:id="preferencesButton" mnemonicParsing="false" text="Preferences" />
+  </bottom>
+  <center>
+    <TabPane fx:id="tabPane" />
+  </center>
+  <top>
+    <VBox prefHeight="-1.0" prefWidth="336.0" spacing="5.0" styleClass="header">
+      <children>
+        <Label text="StockFx">
+          <styleClass>
+            <String fx:value="label" />
+            <!-- String fx:value="title"/ -->
+          </styleClass>
+        </Label>
+        <Label text="Advanced stock portfolio manager">
+          <styleClass>
+            <!-- String fx:value="label "/ -->
+            <String fx:value="tagline" />
+          </styleClass>
+        </Label>
+        <Label fx:id="messageBox" id="message" text="" />
+      </children>
+    </VBox>
+  </top>
 </fx:root>
