1. Added Collections - so now Collections 0-->> Portfolio 0-->> PortfolioStock -- Stock, Stockholding ...  See the EER diagram https://raw.github.com/oehm-smith/StockFx/e405cafeefc1b4dbf31e16ad0e92d9814f56ba11/stockfx/Models/AdvancedDataModel.png 2. Added PortfolioStock (also see EER diagram).  Now to get to Stocks it is now PortfolioStock ps.getStockId(); 3. Added a whole lot of new Entities generated from the EER.  They just use String for example, instead of StringProperty.  As per a Todo I will be converting to use a lot of StringProperties (etc.) instead 4. Created an abstract class StockFxBorderPaneController which all the Controller's extend 5. I made the PortfoliosControllers class which has tables for Collections, Portfolios and Stocks have sub-controllers for each one (that extend extends StockFxSubController).  Cleans it up, gives them access to the @FXML 6. I had to manage the actions of new or open documents through the tab because I want tabs to remain open and have some behaviour when they  are clicked upon.  The behaviour is - if the tab was opened due to a 'new' operation then it will remain in that mode allowing you to add new ones of that item.  It it was opened from an 'open' operation then selecting a different one from the parent screen will set it in that tab.  ANYWAY, to get this going I needed to use the change event of the tabPane.  But its indescriminate and there is no way to tell if the change was because the tab was newly created (the first time) or if the user clicks on it.  This event causes the tab to be populated (if in 'open mode') or cleared (if in 'new mode').  As this was done I had to do everything through the change event.  So opening an item doesn't set the fields in the new or existing tab, but a change event occurs and the event is passed on to the owning controller.  The controller then sets the fields based on which mode the tab is in.  Kinda backwards and I never liked it but seemed like the best option at the time.  See

--- a/stockfx/src/main/resources/fxml/Portfolios.fxml
+++ b/stockfx/src/main/resources/fxml/Portfolios.fxml
@@ -11,8 +11,6 @@
   <bottom>
     <AnchorPane prefHeight="-1.0" prefWidth="-1.0" BorderPane.alignment="TOP_LEFT">
       <children>
-        <Button fx:id="newPortfolioButton" alignment="CENTER_LEFT" mnemonicParsing="false" text="New Portfolio" AnchorPane.leftAnchor="10.0" />
-        <Button fx:id="newStockButton" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" text="New / Add Stock" AnchorPane.leftAnchor="100.0" />
         <Button id="PrefsButton" fx:id="prefsButton" layoutY="0.0" mnemonicParsing="false" text="Preferences" AnchorPane.leftAnchor="256.0" />
       </children>
       <padding>
@@ -24,22 +22,46 @@
     </AnchorPane>
   </bottom>
   <center>
-    <SplitPane dividerPositions="0.4656319290465632" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0">
+    <SplitPane dividerPositions="0.3303769401330377, 0.6607538802660754" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0">
       <VBox fx:id="portfolioList" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0">
         <ScrollPane fitToHeight="true" fitToWidth="true" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
           <content>
-            <!--  VBox fx:id="portfolioList" / -->
-            <TableView fx:id="portfolioTable" />
+            <TableView fx:id="collectionTable" />
           </content>
         </ScrollPane>
+        <HBox prefHeight="-1.0" prefWidth="-1.0">
+          <children>
+            <Button fx:id="newCollectionButton" mnemonicParsing="false" text="New" />
+            <Button fx:id="openCollectionButton" mnemonicParsing="false" text="Open" />
+          </children>
+        </HBox>
       </VBox>
       <VBox fx:id="stockList" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0">
         <ScrollPane fitToHeight="true" fitToWidth="true" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
           <content>
-            <!--  VBox fx:id="portfolioList" / -->
-            <TableView fx:id="stockTable" />
+            <!-- VBox fx:id="portfolioList" / -->
+            <TableView fx:id="portfolioTable" />
           </content>
         </ScrollPane>
+        <HBox prefHeight="-1.0" prefWidth="-1.0">
+          <children>
+            <Button fx:id="newPortfolioButton" alignment="CENTER_LEFT" mnemonicParsing="false" text="New" />
+            <Button fx:id="openPortfolioButton" mnemonicParsing="false" text="Open" />
+          </children>
+        </HBox>
+      </VBox>
+      <VBox minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0">
+        <ScrollPane fx:id="stocksTablePane" fitToHeight="true" fitToWidth="true" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+          <content>
+            <TableView fx:id="stockTable" prefHeight="200.0" prefWidth="200.0" />
+          </content>
+        </ScrollPane>
+        <HBox prefHeight="-1.0" prefWidth="-1.0">
+          <children>
+            <Button fx:id="newStockButton" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" text="New" />
+            <Button fx:id="openStockButton" mnemonicParsing="false" text="Open" />
+          </children>
+        </HBox>
       </VBox>
     </SplitPane>
   </center>
