--- a/stockfx/src/main/resources/fxml/Collection.fxml
+++ b/stockfx/src/main/resources/fxml/Collection.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
-<fx:root type="javafx.scene.layout.BorderPane" fx:id="root" minHeight="193.0" prefHeight="428.0" prefWidth="507.0" xmlns:fx="http://javafx.com/fxml">
+<fx:root type="javafx.scene.layout.BorderPane" fx:id="root" minHeight="193.0" prefHeight="193.0" prefWidth="494.0" xmlns:fx="http://javafx.com/fxml">
   <bottom>
     <AnchorPane prefHeight="-1.0" prefWidth="-1.0" BorderPane.alignment="TOP_LEFT">
       <padding>
@@ -23,11 +23,10 @@
   <center>
     <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="TOP_LEFT">
       <children>
-        <Label text="New Portfolio" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="95.0" />
-        <TextField fx:id="newPortfolioText" prefWidth="78.0" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="95.0" />
+        <Label text="New Collection" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="95.0" />
+        <TextField fx:id="newCollectionText" prefWidth="78.0" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="95.0" />
         <Label text="Type" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="140.0" />
-        <ListView fx:id="typeList" layoutX="103.0" layoutY="150.0" prefHeight="200.0" prefWidth="200.0" />
-        <Button fx:id="newSavePortfolioButton" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" text="Save Portfolio" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="140.0" />
+        <Button fx:id="newSaveCollectionButton" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" text="Save Collection" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="140.0" />
       </children>
       <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
