--- a/stockfx/src/main/resources/fxml/Stock.fxml
+++ b/stockfx/src/main/resources/fxml/Stock.fxml
@@ -32,7 +32,8 @@
         <Label text="New stock company" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="140.0" />
         <TextField fx:id="newStockCompanyText" prefWidth="145.0" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="140.0" />
         <Button fx:id="addToPortfolioButton" alignment="CENTER_LEFT" mnemonicParsing="false" text="Add to Portfolio" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="50.0" />
-        <Button fx:id="newStockButton" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" text="New Stock" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="140.0" />
+        <Button fx:id="newStockButton" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" text="New Stock" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="93.0" />
+        <Button fx:id="saveButton" layoutX="360.0" layoutY="148.0" mnemonicParsing="false" text="Save" />
       </children>
       <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
