--- a/stockfx/src/main/resources/fxml/Stock.fxml
+++ b/stockfx/src/main/resources/fxml/Stock.fxml
@@ -23,17 +23,35 @@
   <center>
     <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="TOP_LEFT">
       <children>
-        <Label text="Stock" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="50.0" />
-        <ComboBox fx:id="stocksCombo" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="50.0" />
-        <Label text="New stock symbol" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="95.0" />
-        <TextField fx:id="newStockSymbolText" prefWidth="78.0" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="95.0" />
-        <Label id="portfolioNameLabelLabel" fx:id="portfolioNameLabel" prefWidth="153.0" text="Label" textAlignment="LEFT" AnchorPane.leftAnchor="124.0" AnchorPane.topAnchor="5.0" />
-        <Label id="portfolioNameLabel" text="Portfolo Name:" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="5.0" />
-        <Label text="New stock company" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="140.0" />
-        <TextField fx:id="newStockCompanyText" prefWidth="145.0" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="140.0" />
-        <Button fx:id="addToPortfolioButton" alignment="CENTER_LEFT" mnemonicParsing="false" text="Add to Portfolio" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="50.0" />
-        <Button fx:id="newStockButton" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" text="New Stock" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="93.0" />
-        <Button fx:id="saveButton" layoutX="360.0" layoutY="148.0" mnemonicParsing="false" text="Save" />
+        <VBox prefHeight="-1.0" prefWidth="-1.0" spacing="20.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+          <children>
+            <Label id="portfolioNameLabel" text="Portfolo Name:" />
+            <Label text="Stock" />
+            <Label text="New stock symbol" />
+            <Label text="New stock company" />
+          </children>
+          <padding>
+            <Insets bottom="10.0" right="10.0" top="10.0" />
+          </padding>
+        </VBox>
+        <VBox prefHeight="-1.0" prefWidth="-1.0" spacing="15.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="10.0">
+          <children>
+            <Label id="portfolioNameLabelLabel" fx:id="portfolioNameLabel" prefWidth="153.0" text="Label" textAlignment="LEFT" />
+            <ComboBox fx:id="stocksCombo" />
+            <TextField fx:id="newStockSymbolText" prefWidth="78.0" />
+            <TextField fx:id="newStockCompanyText" prefWidth="145.0" />
+          </children>
+          <padding>
+            <Insets bottom="10.0" top="10.0" />
+          </padding>
+        </VBox>
+        <VBox prefHeight="-1.0" prefWidth="-1.0" spacing="20.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+          <children>
+            <Button fx:id="addToPortfolioButton" alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add to Portfolio" VBox.vgrow="ALWAYS" />
+            <Button fx:id="newStockButton" alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefWidth="-1.0" text="New Stock" VBox.vgrow="ALWAYS" />
+            <Button fx:id="saveButton" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefWidth="-1.0" text="Save" VBox.vgrow="ALWAYS" />
+          </children>
+        </VBox>
       </children>
       <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
